updating index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello Worl
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Created a webpage in github</h1>
+    <br>
+    <p>Working on a few fun pieces.</p>
+    <!--testing-->
+    
+</body>
+</html>
+
